--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,6 @@
-openai==1.2.0
-requests==2.31.0
-flask==3.0.0
-python-dotenv==1.0.0
-flask-cors==4.0.0
+openai>=1.35.0
+requests>=2.31.0
+flask>=3.0.0
+python-dotenv>=1.0.0
+flask-cors>=4.0.0
+httpx>=0.25.0
